vitrail-pg-macros/tests/ui/fail/update_data_wrong_type.stderr
error[E0277]: the trait bound `i64: __VitrailUpdateDataType_update_schema_post_published` is not satisfied
  --> tests/ui/fail/update_data_wrong_type.rs:16:16
   |
16 |     published: i64,
   |                ^^^ the trait `__VitrailUpdateDataType_update_schema_post_published` is not implemented for `i64`
   |
help: the trait `__VitrailUpdateDataType_update_schema_post_published` is implemented for `bool`
  --> tests/ui/fail/update_data_wrong_type.rs:3:1
   |
 3 | / schema! {
 4 | |     name update_schema
 5 | |
 6 | |     model post {
...  |
11 | | }
   | |_^
note: required by a bound in `__vitrail_assert_update_data_field_type`
  --> tests/ui/fail/update_data_wrong_type.rs:3:1
   |
 3 | / schema! {
 4 | |     name update_schema
 5 | |
 6 | |     model post {
...  |
11 | | }
   | |_^ required by this bound in `__vitrail_assert_update_data_field_type`
12 |
13 |   #[derive(UpdateData)]
   |            ---------- in this derive macro expansion
   = note: this error originates in the macro `schema` which comes from the expansion of the derive macro `UpdateData` (in Nightly builds, run with -Z macro-backtrace for more info)
